# DeutschStart

./: .gitignore  README.md  deployment_guide.md
client/android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
client/android/app/: build.gradle.kts
client/android/app/release/: output-metadata.json
client/android/gradle/: libs.versions.toml
data/raw/grammar/: grammar_a1_consolidated.json
server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  vocabulary.json
server/app/: celery_app.py  config.py  database.py  main.py
server/app/api/v1/: import_content.py  packs.py
server/app/models/: grammar.py  vocabulary.py
server/app/schemas/: content.py
server/app/services/: audio_generator.py  content_packager.py
server/app/tasks/: ingest_kaikki.py  pipeline.py  validate_seed.py
server/app/validators/: cefr_a1_checker.py  kaikki_validator.py  semantic_qa_report.py
server/data/seed/: a1_frequency_400.json
server/scripts/: check_invalid_seed.py  check_missing_articles.py  cleanup_grammar_topics.py  debug_anki_fields.py  debug_db_counts.py  debug_import.py  debug_kaikki_content.py  deduplicate_grammar.py  extract_anki.py  fast_reimport.py  fix_audio_compatibility.py  fix_deployment.sh  import_and_generate.py  merge_and_import_grammar.py  merge_import_generate.py  migrate_add_ordering_columns.py  test_daflex.py  test_pack_gen.py  verify_ordering.py  verify_pack_content.py
server/temp_check/: vocabulary.json
server/temp_check_final/: vocabulary.json
server/tests/: test_a1_checker.py  test_content_packager.py
(+69 files in other folders)
