[tool.poetry]
name = "deutschstart-server"
version = "0.1.0"
description = "Backend content generation server for DeutschStart"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
greenlet = "^3.0.3"
httpx = "^0.27.0"
redis = "^5.0.3"
celery = "^5.3.6"
python-multipart = "^0.0.9"
minio = "^7.2.5"
openai = "^1.13.3"
tenacity = "^8.2.3"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
